# Elysium

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  CMakeSettings.json  README.md  Review.md  elysium.ps1  elysium.sh  tmpclaude-b667-cwd
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: elysium-build.yml
Assets/: CharacterTypes.xml  ExploreScene.xml  GameConfig.xml  LoadingConfig.xml  MemoryTestScene.xml  MenuScene.xml  Scene.xml  Tilemap.tmx  save.db
Assets/Animation/: Animation.xml
Assets/Characters/: Archer.xml  Bishop.xml  Knight.xml  Militia.xml  Worker.xml
Assets/Config/: ApplicationConfig.xml  LoadingConfig.xml
Assets/Scenes/: ExploreScene.xml  ExploreScene1.xml  InventoryScene.xml  MenuScene.xml  OptionsScene.xml  Scene.xml  TestScene.xml  Tilemap.xml
Assets/Scripts/: BounceIn.lua  CommandCenter.lua  Component.lua  ExploreScene.lua  FadeIn.lua  Jiggle.lua  MenuButton.lua  PortraitSlot.lua  SlideIn.lua  Strobe.lua  TypeWriter.lua  Unit.lua  barracks.lua  command_center.lua  event_test.lua  menu_button.lua  resource_node.lua  soldier.lua  test.lua  worker.lua
Assets/Tiles/: floor.aseprite
Assets/song1/: song.xml
Documents/: ECS.md
Include/: Animation.h  Application.h  Asset.h  Common.h  Component.h  Entity.h  Entity.h.txt  Event.h  GameConfig.h  GameScene.h  IScene.h  LogService.h  MenuScene.h  Message.h  MetricsService.h  Path.h  Scene.h  SceneInspector.h  SceneRenderer.h  SceneTransitionController.h  Service.h  Sprite.h  StateMachine.h  System.h  Timeline.h  Try.h  Xml.h
Include/Components/: BattleComponents.h  CharacterComponent.h
Include/Events/: BattleEvents.h
Include/Messages/: NetworkMessages.h  SceneMessages.h
Include/Network/: ByteBuffer.h  ComponentSerializer.h  DirtyTracker.h  EntitySyncManager.h  NetworkInput.h  NetworkProtocol.h
Include/Scenes/: BattleScene.h  ExploreScene.h  GameScene.h  LoadingScene.h  MenuScene.h  OverworldScene.h  RenderTestScene.h  Scenes.h
Include/Services/: AssetService.h  BattleEntityService.h  CharacterRepository.h  CharacterService.h  CharacterUI.h  EventService.h  InspectorService.h  JukeboxService.h  LoadingService.h  LogService.h  MemoryTracker.h  MessageService.h  MetricsService.h  NetworkService.h  PersistenceService.h  SceneService.h  Services.h  TaskService.h  TimelineService.h  WorldService.h
Include/Systems/: AnimationSystem.h  AnimationSystem_Old.h.txt  BattleSystem.h  BehaviorSystem.h  CameraSystem.h  ClientNetworkSystem.h  CooldownSystem.h  CursorSystem.h  MovementSystem.h  PhysicsSystem.h  PickSystem.h  RenderSystem.h  ServerNetworkSystem.h  SpriteSystem.h  TimelineSystem.h  TurnSystem.h
Projects/DemoGame/: Project.xml
Projects/HelloWorld/: Project.xml
Source/: Application.cpp  Application.h  ApplicationLoader.cpp  Asset.cpp  Asset.h  Component.cpp  Entity.cpp  Entity.h  Event.h  GameScene.cpp  LogService.cpp  MenuScene.cpp  Message.cpp  MetricsService.cpp  Path.cpp  Scene.cpp  SceneInspector.cpp  SceneLoader.cpp  SceneRenderer.cpp  SceneSaver.cpp  SceneSerializer.cpp  SceneTransitionController.cpp  Service.cpp  Sprite.cpp  StateMachine.cpp  World.cpp  Xml.cpp  Xml.h  main.cpp
Source/Components/: AnimationComponent.cpp  AnimationComponent.h  AttackComponent.cpp  AttackComponent.h  BoundsComponent.cpp  BoundsComponent.h  CameraComponent.cpp  CameraComponent.h  CarryComponent.cpp  CarryComponent.h  CharacterComponent.cpp  CharacterComponent.h  CircleComponent.cpp  CircleComponent.h  ColliderComponent.cpp  ColliderComponent.h  CooldownComponent.cpp  CooldownComponent.h  DebugComponent.cpp  DebugComponent.h  DirectionComponent.cpp  DirectionComponent.h  EllipseComponent.cpp  EllipseComponent.h  FactionComponent.cpp  FactionComponent.h  FollowComponent.cpp  FollowComponent.h  HealthComponent.cpp  HealthComponent.h  KinematicsComponent.cpp  KinematicsComponent.h  LayerComponent.cpp  LayerComponent.h  LightComponent.cpp  LightComponent.h  LineComponent.cpp  LineComponent.h  LocationComponent.cpp  LocationComponent.h  (+44 more)
Source/Core/: Application.cpp  Application.h  ApplicationLoader.cpp  Asset.cpp  Asset.h  Character.cpp  Character.h  CommandLine.cpp  CommandLine.h  Component.cpp  Component.h  ComponentRegistry.cpp  ComponentRegistry.h  Components.h  Editor.h  Entity.cpp  Entity.h  Event.h  Future.h  Geometry.cpp  Geometry.h  Message.h  Path.cpp  Path.h  Prefab.cpp  Prefab.h  Project.cpp  Project.h  RenderContext.cpp  RenderContext.h  Scene.cpp  Scene.h  SceneLayer.cpp  SceneLayer.h  SceneLoader.cpp  SceneSaver.cpp  Script.h  Serial.h  Signal.h  Sprite.cpp  (+9 more)
Source/Editor/: AssetEditor.cpp  AssetEditor.h  LogEditor.cpp  LogEditor.h  NetworkEditor.cpp  NetworkEditor.h  SceneEditor.cpp  SceneEditor.h  SceneInspector.cpp  ScriptEditor.cpp  ScriptEditor.h  TimelineEditor.cpp  TimelineEditor.h  ViewportEditor.cpp  ViewportEditor.h  WorldEditor.cpp  WorldEditor.h
Source/Interface/: Invoke.xml
Source/Messages/: NetworkMessages.h  SceneMessages.h
Source/Network/: ComponentSerializer.cpp  ComponentSerializer.h  DirtyTracker.cpp  EntitySyncManager.cpp  EntitySyncManager.h  Generated.h  Network.cpp  Network.h  NetworkInput.h  NetworkProtocol.h  NetworkSynchronizer.cpp  NetworkSynchronizer.h
Source/Scenes/: BattleScene.cpp  ExploreScene.cpp  ExploreScene.h  GameScene.cpp  LoadingScene.h  MenuScene.cpp  MenuScene.h  OverworldScene.cpp  OverworldScene.h  RenderTestScene.cpp  Scenes.h
Source/Services/: AssetService.cpp  AssetService.h  BattleEntityService.cpp  CharacterRepository.cpp  CharacterService.cpp  CharacterUI.cpp  EditorService.cpp  EditorService.h  EventService.cpp  EventService.h  InspectorService.cpp  InvokeService.cpp  InvokeService.h  JukeboxService.cpp  LoadingService.cpp  LoadingService.h  LogService.cpp  LogService.h  MemoryTracker.cpp  MessageService.cpp  MessageService.h  MetricsService.cpp  NetworkService.cpp  NetworkService.h  PersistenceService.cpp  SceneService.cpp  SceneService.h  ScriptService.cpp  ScriptService.h  Service.cpp  Service.h  Services.h  TaskService.h  TimelineService.cpp  (+3 more)
Tests/: conftest.py
(+161 files in other folders)
